--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(faang)
 set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB_RECURSE FILES
-    *.hpp
-    *.cpp)
+    leet_code/*.hpp
+    leet_code/*.cpp
+    pramp/*.hpp
+    pramp/*.cpp)
 
 add_executable( ${PROJECT_NAME} main.cpp ${FILES})
